--- a/library_api/books/templates/books/book_list.html
+++ b/library_api/books/templates/books/book_list.html
@@ -1,6 +1,20 @@
-<h1>Book List</h1>
-<ul>
+{% extends 'books/base.html' %}
+
+{% block title %}Book List{% endblock %}
+
+{% block content %}
+<h1 class="mb-4">Book List</h1>
+<div class="row">
     {% for book in object_list %}
-        <li><a href="{{ book.get_absolute_url }}">{{ book.title }}</a></li>
+    <div class="col-md-4">
+        <div class="card mb-4">
+            <div class="card-body">
+                <h5 class="card-title">{{ book.title }}</h5>
+                <p class="card-text">Author: {{ book.author }}</p>
+                <a href="{{ book.get_absolute_url }}" class="btn btn-primary">View Details</a>
+            </div>
+        </div>
+    </div>
     {% endfor %}
-</ul>
+</div>
+{% endblock %}
