--- a/library_api/books/templates/books/login.html
+++ b/library_api/books/templates/books/login.html
@@ -1,6 +1,13 @@
-<h1>Login</h1>
-<form method="post">
+{% extends 'books/base.html' %}
+
+{% block title %}Login{% endblock %}
+
+{% block content %}
+<h1 class="mb-4">Login</h1>
+<form method="post" class="needs-validation" novalidate>
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
+<p class="mt-3">Don't have an account? <a href="/register/">Register here</a>.</p>
+{% endblock %}
