--- a/library_api/books/templates/books/logout.html
+++ b/library_api/books/templates/books/logout.html
@@ -1,3 +1,11 @@
-<h1>Logout</h1>
-<p>You have been logged out.</p>
-<a href="/login/">Login again</a>
+{% extends 'books/base.html' %}
+
+{% block title %}Logout{% endblock %}
+
+{% block content %}
+<h1 class="mb-4">Logout</h1>
+<div class="alert alert-info" role="alert">
+    You have been logged out successfully.
+</div>
+<a href="/login/" class="btn btn-primary">Login again</a>
+{% endblock %}
