--- a/library_api/books/templates/books/register.html
+++ b/library_api/books/templates/books/register.html
@@ -1,6 +1,13 @@
-<h1>Register</h1>
-<form method="post">
+{% extends 'books/base.html' %}
+
+{% block title %}Register{% endblock %}
+
+{% block content %}
+<h1 class="mb-4">Register</h1>
+<form method="post" class="needs-validation" novalidate>
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Register</button>
+    <button type="submit" class="btn btn-success">Register</button>
 </form>
+<p class="mt-3">Already have an account? <a href="/login/">Login here</a>.</p>
+{% endblock %}
