--- a/library_api/books/templates/books/borrowing_history.html
+++ b/library_api/books/templates/books/borrowing_history.html
@@ -10,6 +10,7 @@
             <th>Book Title</th>
             <th>Check-Out Date</th>
             <th>Return Date</th>
+            <th>Overdue</th>
         </tr>
     </thead>
     <tbody>
@@ -18,6 +19,7 @@
             <td>{{ transaction.book.title }}</td>
             <td>{{ transaction.check_out_date }}</td>
             <td>{% if transaction.return_date %}{{ transaction.return_date }}{% else %}Not Returned{% endif %}</td>
+            <td>{% if transaction.is_overdue %}<span class="text-danger">Yes</span>{% else %}No{% endif %}</td>
         </tr>
         {% endfor %}
     </tbody>
